# remote-sensing-new-building-detection-snap2stamps-psi

./: .gitignore  PIPELINE_CASABLANCA_BUILTUP_DOCUMENTATION_FR.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: aoi_builtup.yaml  aoi_psi_slc.yaml  aoi_psi_slc_cdpsi_min6.yaml  aoi_psi_slc_minimal.yaml  casablanca_city.yaml  psi_casablanca_slc.yaml  psi_casablanca_slc_cdpsi_min6.yaml  psi_casablanca_slc_minimal.yaml
docs/: architecture.md  migration-plan.md  operations.md  psi-architecture.md  system-guide.md
notebooks/: aoi_building_height_wayback_kaggle.ipynb  aoi_new_building_wayback_changestar_kaggle.ipynb  building_polygon_extraction_wayback_hisup_kaggle.ipynb  casablanca_building_height_wayback_kaggle.ipynb  casablanca_new_building_wayback_changestar_kaggle.ipynb
resources/matlab_helpers/: gausswin.m  interp.m  nanmean.m
resources/snap_graphs/: band_merge_product_set.xml  coregister_stack.xml  coregister_stack_no_esd.xml  create_stack_product.xml  derive_ifg_from_coreg_stack.xml  stamps_export.xml  (+3 more)
scripts/: generate_wayback_aoi_changestar_notebook.py  generate_wayback_aoi_hisup_notebook.py  generate_wayback_aoi_rs3dada_icesat_notebook.py  generate_wayback_changestar_notebook.py  generate_wayback_hisup_notebook.py  generate_wayback_rs3dada_icesat_notebook.py  patch_kaggle_changestar_visuals.py
tests/: helpers.py  test_config.py  test_pipeline_interruption.py  test_pipeline_s2_unavailable.py  test_pipeline_stage_boundaries.py  test_qa.py  test_resume.py  test_s1_detection.py  test_s2_composite.py  test_s2_refinement.py  test_vectorize.py
(+87 files in other folders)
